--- a/css/app.css
+++ b/css/app.css
@@ -13,3 +13,9 @@ li{
     font-size: 24px;
     text-align: center;
 }
+
+#icon{
+    width: 60px;
+    height: 60px;
+    background-color: #e4393c;
+}
